Atualizações: badge Netlify, modal de imagem, melhorias JS e HTML

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                             <div class="w-12 h-12 bg-green-500 rounded-full flex items-center justify-center mr-4">
                                 <i class="fas fa-calendar text-white"></i>
                             </div>
-                            <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot Alfa</h3>
+                            <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot</h3>
                         </div>
                         <ul class="space-y-3">
                             <li class="flex items-center">
@@ -263,7 +263,7 @@
                                 <div class="w-12 h-12 bg-green-500 rounded-full flex items-center justify-center mr-4">
                                     <i class="fas fa-calendar text-white"></i>
                                 </div>
-                                <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot</h3>
+                                <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot Beta</h3>
                             </div>
                             <ul class="space-y-3">
                                 <li class="flex items-center">
@@ -957,9 +957,9 @@ Start
   Move Forward (Motors B+C, Power 75)
   Loop Forever
     Switch (Light Sensor)
-      Case 1 (Value < 30)
+      Case 1 (Value &lt; 30)
         Move Left (Motor C forward, Motor B backward)
-      Case 2 (Value >= 30)
+      Case 2 (Value &gt;= 30)
         Move Right (Motor B forward, Motor C backward)
     End Switch
   End Loop
@@ -1049,8 +1049,8 @@ End
                         </div>
                     </div>
                     
-                    <h3 class="text-2xl font-bold text-green-400 mb-6">Desafio Inicial</h3>
-                    
+                    <h3 class="text-2xl font-bold text-green-400 mb-6">Desafio Inicial</h3
+                    >
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
                         <div class="bg-gray-800 rounded-lg p-6 hover:border-green-400 transition">
                             <div class="flex justify-center mb-4">
