--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center mr-3">
                                     <i class="fas fa-code text-white text-sm"></i>
                                 </div>
-                                <span class="font-medium">Gabriel Silva Oliveira</span> (programador)
+                                <span>Gabriel Silva Oliveira</span> (programador)
                             </li>
                             <li class="flex items-center">
                                 <div class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center mr-3">
@@ -229,60 +229,59 @@
                             <div class="w-12 h-12 bg-green-500 rounded-full flex items-center justify-center mr-4">
                                 <i class="fas fa-calendar text-white"></i>
                             </div>
-                            <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot</h3>
+                            <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot Alfa</h3>
                         </div>
                         <ul class="space-y-3">
                             <li class="flex items-center">
                                 <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center mr-3">
                                     <i class="fas fa-code text-white text-sm"></i>
                                 </div>
-                                <span class="font-medium">Gabriel Silva Oliveira</span> (programador)
+                                <span>João Manuel</span>
                             </li>
                             <li class="flex items-center">
                                 <div class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center mr-3">
                                     <i class="fas fa-cogs text-white text-sm"></i>
                                 </div>
-                                <span>Leonardo</span>
+                                <span>Diam</span>
                             </li>
                             <li class="flex items-center">
                                 <div class="w-8 h-8 bg-yellow-500 rounded-full flex items-center justify-center mr-3">
                                     <i class="fas fa-tools text-white text-sm"></i>
                                 </div>
-                                <span>Daniel</span>
-                            </li>
-                            <li class="flex items-center">
-                                <div class="w-8 h-8 bg-red-500 rounded-full flex items-center justify-center mr-3">
-                                    <i class="fas fa-lightbulb text-white text-sm"></i>
-                                </div>
-                                <span>João Vitor</span>
+                                <span>Jamilly</span>
                             </li>
                         </ul>
-                        
                         <div class="mt-8 pt-6 border-t border-gray-700">
                             <div class="flex items-center mb-4">
                                 <div class="w-12 h-12 bg-green-500 rounded-full flex items-center justify-center mr-4">
                                     <i class="fas fa-calendar text-white"></i>
                                 </div>
-                                <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot Beta</h3>
+                                <h3 class="text-2xl font-bold text-green-400">2024 - ScriptBot</h3>
                             </div>
                             <ul class="space-y-3">
                                 <li class="flex items-center">
                                     <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center mr-3">
                                         <i class="fas fa-code text-white text-sm"></i>
                                     </div>
-                                    <span>João Manuel</span>
+                                    <span class="font-medium">Gabriel Silva Oliveira</span> (programador)
                                 </li>
                                 <li class="flex items-center">
                                     <div class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center mr-3">
                                         <i class="fas fa-cogs text-white text-sm"></i>
                                     </div>
-                                    <span>Diam</span>
+                                    <span>Leonardo</span>
                                 </li>
                                 <li class="flex items-center">
                                     <div class="w-8 h-8 bg-yellow-500 rounded-full flex items-center justify-center mr-3">
                                         <i class="fas fa-tools text-white text-sm"></i>
                                     </div>
-                                    <span>Jamilly</span>
+                                    <span>Daniel</span>
+                                </li>
+                                <li class="flex items-center">
+                                    <div class="w-8 h-8 bg-red-500 rounded-full flex items-center justify-center mr-3">
+                                        <i class="fas fa-lightbulb text-white text-sm"></i>
+                                    </div>
+                                    <span>João Vitor</span>
                                 </li>
                             </ul>
                         </div>
