--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </video>
     <!-- Vídeo de fundo para mobile -->
     <video id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
-        <source src="https://pvzh.giantapp.cn/upload/67fcd74d1587159ef2b3e46f/wallpapers/682ec10be0666a85c1284b2a/1747894487151_nuk3W.mp4" type="video/mp4">
+        <source src="PL_MOBILE.jpg" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
     </video>
     <div class="relative z-10">
