--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Seu navegador não suporta vídeo em HTML5.
     </video>
     <!-- Vídeo de fundo para mobile -->
-    <video id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
+    <imag id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
         <source src="PL_MOBILE.jpg" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
     </video>
