--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body class="tech-bg">
       <!-- Vídeo de fundo para desktop -->
-    <video id="bg-video-desktop" class="fixed top-0 left-0 w-full h-full object-cover z-0 hidden md:block" autoplay loop muted playsinline>
+    <imag id="bg-video-desktop" class="fixed top-0 left-0 w-full h-full object-cover z-0 hidden md:block" autoplay loop muted playsinline>
         <source src="https://pvzh.giantapp.cn/upload/7ba4489763c74c71ad1716e120da8e05/wallpapers/33c5161d670cd1d40f7176aa0ca47e56/1728893335163_Uacn4.mp4" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
-    </video>
+    </imag>
     <!-- Vídeo de fundo para mobile -->
-    <imag id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
+    <video id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
         <source src="PL_MOBILE.jpg" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
     </video>
