--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         Seu navegador não suporta vídeo em HTML5.
     </imag>
     <!-- Vídeo de fundo para mobile -->
-    <video id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
+    <imag id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
         <source src="PL_MOBILE.jpg" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
-    </video>
+    </imag>
     <div class="relative z-10">
     <!-- Navigation -->
     <nav class="fixed top-0 left-0 right-0 z-50 bg-blue-900 bg-opacity-95 backdrop-filter backdrop-blur-lg border-b border-blue-800">
