--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body class="tech-bg">
       <!-- Vídeo de fundo para desktop -->
-    <imag id="bg-video-desktop" class="fixed top-0 left-0 w-full h-full object-cover z-0 hidden md:block" autoplay loop muted playsinline>
+    <video id="bg-video-desktop" class="fixed top-0 left-0 w-full h-full object-cover z-0 hidden md:block" autoplay loop muted playsinline>
         <source src="https://pvzh.giantapp.cn/upload/7ba4489763c74c71ad1716e120da8e05/wallpapers/33c5161d670cd1d40f7176aa0ca47e56/1728893335163_Uacn4.mp4" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
-    </imag>
+    </video>
     <!-- Vídeo de fundo para mobile -->
-    <imag id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
-        <source src="PL_MOBILE.jpg" type="video/mp4">
+    <video id="bg-video-mobile" class="fixed top-0 left-0 w-full h-full object-cover z-0 block md:hidden" autoplay loop muted playsinline>
+        <source src="https://pvzh.giantapp.cn/upload/67fcd74d1587159ef2b3e46f/wallpapers/682ec10be0666a85c1284b2a/1747894487151_nuk3W.mp4" type="video/mp4">
         Seu navegador não suporta vídeo em HTML5.
-    </imag>
+    </video>
     <div class="relative z-10">
     <!-- Navigation -->
     <nav class="fixed top-0 left-0 right-0 z-50 bg-blue-900 bg-opacity-95 backdrop-filter backdrop-blur-lg border-b border-blue-800">
